--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Fotógrafa, artesã e empreendedora" />
+    <meta name="og:title" content="Beatriz Assunção" />
+    <meta name="og:description" content="Fotógrafa, artesã e empreendedora" />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://beatrizassuncao.site" />
     <title>Beatriz Assunção</title>
   </head>
   <body>
